<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dominion</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Dominion!</string>
    <string name="supply_text">Supply</string>
    <string name="play_area_text">Play Area</string>
    <string name="hand_text">Hand</string>
    <string name="message">Messages…</string>
    <string name="end_turn_button">End Turn</string>

</resources>
