<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <TextView
              android:id="@+id/supply_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/supply_text" />

    <GridView
              android:id="@+id/treasure"
              android:layout_width="60dp"
              android:layout_height="wrap_content"
              android:columnWidth="60dp"
              android:numColumns="auto_fit"
              android:verticalSpacing="3dp"
              android:horizontalSpacing="0dp"
              android:stretchMode="columnWidth"
              android:gravity="center"
              android:paddingTop="45dp"
              android:layout_below="@+id/supply_text" />

    <GridView
              android:id="@+id/victory"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              android:columnWidth="70dp"
              android:numColumns="auto_fit"
              android:verticalSpacing="0dp"
              android:horizontalSpacing="-30dp"
              android:stretchMode="columnWidth"
              android:layout_below="@+id/supply_text"
              android:layout_alignTop="@+id/treasure"
              android:layout_toRightOf="@+id/treasure" />

    <GridView
              android:id="@+id/five_cost"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              android:columnWidth="70dp"
              android:numColumns="auto_fit"
              android:verticalSpacing="0dp"
              android:horizontalSpacing="-30dp"
              android:stretchMode="columnWidth"
              android:layout_below="@+id/victory"
              android:layout_toRightOf="@+id/treasure" />

    <GridView
              android:id="@+id/four_cost"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              android:columnWidth="70dp"
              android:numColumns="auto_fit"
              android:verticalSpacing="0dp"
              android:horizontalSpacing="-30dp"
              android:stretchMode="columnWidth"
              android:layout_below="@+id/five_cost"
              android:layout_toRightOf="@+id/treasure" />

    <GridView
              android:id="@+id/three_cost"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              android:columnWidth="70dp"
              android:numColumns="auto_fit"
              android:verticalSpacing="0dp"
              android:horizontalSpacing="-30dp"
              android:stretchMode="columnWidth"
              android:layout_below="@+id/four_cost"
              android:layout_toRightOf="@+id/treasure" />

    <GridView
              android:id="@+id/two_cost"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              android:columnWidth="70dp"
              android:numColumns="auto_fit"
              android:verticalSpacing="0dp"
              android:horizontalSpacing="-30dp"
              android:stretchMode="columnWidth"
              android:layout_below="@+id/three_cost"
              android:layout_toRightOf="@+id/treasure" />

    <TextView
              android:id="@+id/play_area_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/play_area_text"
              android:layout_below="@+id/two_cost" />

    <GridView
              android:id="@+id/play_area"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              android:columnWidth="70dp"
              android:numColumns="auto_fit"
              android:verticalSpacing="0dp"
              android:horizontalSpacing="-30dp"
              android:stretchMode="columnWidth"
              android:layout_below="@+id/play_area_text" />

    <TextView
              android:id="@+id/hand_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/hand_text"
              android:layout_below="@+id/play_area" />

    <GridView
              android:id="@+id/hand"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              android:columnWidth="70dp"
              android:numColumns="auto_fit"
              android:verticalSpacing="0dp"
              android:horizontalSpacing="-30dp"
              android:stretchMode="columnWidth"
              android:layout_below="@+id/hand_text" />

    <ScrollView
                android:id="@+id/messages_scroll"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fillViewport="true"
                android:layout_below="@+id/hand" >

        <TextView
                  android:id="@+id/messages"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/message" />


    </ScrollView>

    <Button
            android:id="@+id/end_turn_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_turn_button"
            android:onClick="endTurn"
            android:layout_below="@+id/messages_scroll" />

</RelativeLayout>
